versions, and may require changes to existing program code.

Loris can be downloaded from http://sourceforge.net/projects/loris

For more information about Loris, contact the developers at
loris@cersloundgroup.org, or visit them at
http://www.cerlsoundgroup.org/Loris

Please send bug reports to loris@cerlsoundgroup.org

Loris is free software. Please see the file COPYING for details.

Loris is Copyright (c) 1999-2008 by Kelly Fitz and Lippold Haken.


History of visible changes, organized by relase number:

-------------------------------------------------------
changes since 1.5.2 release:

- Analyzer can have time-varying frequency resolution
specified by an Envelope.

- Replaced Fundamental class with a pair of classes for
estimating fundamental frequency, FundamentalFromSamples
performs reassigned spectral analysis and estimates the
fundamental from the spectral peaks, and FundamentalFromPartials
estimates the fundamental from the frequency and amplitude
envelopes of a collection of Partials.

- Look for Csound5 headers at config time, and prefer to
build Csound5 opcode library, fall back to Csound4. 

-------------------------------------------------------
changes since 1.5.1 release:

- Analyzer always constructs amplitude and fundamental
frequency envelopes during analysis (cannot disable).

- fixed broken SpcFile::addPartial members in Python 
interface.

- improved resampling in the Python interface, now
have options for sparse (default) and dense (good 
for use with CNMAT sinusoids~ external for Max/MSP)
resampling.

-------------------------------------------------------
changes since 1.5 release:

- updated command-line analysis utility (loris-analyze)
to estimate the fundamental frequency reference envelope
during analysis when distilling or sifting.

- updated command-line analysis utility (loris-analyze)
to provide a choice between spectral residue (-bwresidue)
and sinusoidal convergence (mixed derivative of phase)