@@ -1,4 +1,4 @@
-# Copyright (c) 1999-2008, Kelly Fitz and Lippold Haken <loris@cerlsoundgroup.org>
+# Copyright (c) 1999-2009, Kelly Fitz and Lippold Haken <loris@cerlsoundgroup.org>
 #  
 # This file is free software; as a special exception the author gives
 # unlimited permission to copy and/or distribute it, with or without 
