@@ -64,7 +64,7 @@ directory as the interface to the C module.
 
 COPYRIGHT AND LICENSE:
 
-Loris is Copyright (c) 1999-2008 by Kelly Fitz and Lippold Haken
+Loris is Copyright (c) 1999-2009 by Kelly Fitz and Lippold Haken
 
 Loris is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
