@@ -4,7 +4,7 @@
 #   manipulation, and synthesis of digitized sounds using the Reassigned 
 #   Bandwidth-Enhanced Additive Sound Model.
 #   
-#   Loris is Copyright (c) 1999-2008 by Kelly Fitz and Lippold Haken
+#   Loris is Copyright (c) 1999-2009 by Kelly Fitz and Lippold Haken
 #  
 #   This program is free software; you can redistribute it and/or modify
 #   it under the terms of the GNU General Public License as published by
